# todo-svelte-tauri-app

./: .gitignore  README.md  index.html  package.json
src/: App.svelte  styles.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Greet.svelte
src/stores/: store.js
